objects/Match_Record__c.object
<CustomObject>
    <fields>
        <fullName>AE_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Match_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <formula>TEXT(Ordering_Practice_Name__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordering Practice Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Do_Not_Send_IOE__c</fullName>
        <formula>Ordering_Practice_Name__r.Do_not_send_IOE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inherited from Account&apos;s &apos;Do Not Send IOE&apos; field.</inlineHelpText>
        <label>Account Do Not Send IOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alteration_Map__c</fullName>
        <description>Hidden field for Webmerge Mappings</description>
        <formula>IF(CONTAINS(Qualifying_Target_Gene__c, &apos;MET&apos;), &quot;a MET&quot;,
 IF(CONTAINS(Qualifying_Target_Gene__c, &apos;RET&apos;), &quot;a RET&quot;,
  IF(CONTAINS(Qualifying_Target_Gene__c, &apos;NTRK1&apos;), &quot;an NTRK1&quot;,
   IF(CONTAINS(Qualifying_Target_Gene__c, &apos;PDGFRA&apos;), &quot;a PDGFRA&quot;,
    IF(CONTAINS(Qualifying_Target_Gene__c, &apos;KIT&apos;), &quot;a KIT&quot;, 
     IF(CONTAINS(Qualifying_Target_Gene__c, &apos;ALK&apos;), &quot;an ALK&quot;,
      IF(CONTAINS(Qualifying_Target_Gene__c, &apos;ROS&apos;), &quot;a ROS1&quot;,&quot;a qualifying alteration&quot;
      )
     )
    )
   )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alteration Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Must be Force-Biopharma CTA or Force-Biopharma.</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>startsWith</operation>
                <value>Force-Biopharma</value>
            </filterItems>
            <infoMessage>Must be Force-Biopharma CTA or Force-Biopharma.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Match_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Batch Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTA_Contact_Owner__c</fullName>
        <formula>Ordering_Physician_Name__r.CTA_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTA Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTA_Owner__c</fullName>
        <formula>Owner:User.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTA Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancer_Class__c</fullName>
        <formula>Sample_ID__r.Cancer_Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancer Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancer_Stage__c</fullName>
        <formula>Sample_ID__r.Cancer_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancer Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancer_Type_Lower_Case__c</fullName>
        <formula>LOWER(Sample_ID__r.Cancer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field used for email template</inlineHelpText>
        <label>Cancer Type Lower Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancer_Type__c</fullName>
        <formula>Sample_ID__r.Cancer_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Notes__c</fullName>
        <label>Client Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closest_Trial_Site2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closest Trial Site</label>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Match Records (Closest Trial Site)</relationshipLabel>
        <relationshipName>Match_Records2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closest_Trial_Site_City__c</fullName>
        <label>Closest Trial Site City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closest_Trial_Site_State__c</fullName>
        <label>Closest Trial Site State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closest_Trial_Site_Type__c</fullName>
        <formula>TEXT(Closest_Trial_Site2__r.Trial_Site_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from Trial Site Type field of Closest Trial Site</inlineHelpText>
        <label>Closest Trial Site Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closest_Trial_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closest Trial Site (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Match Records (Closest Trial Site)</relationshipLabel>
        <relationshipName>Match_Records2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closest_Trial_Sites_List__c</fullName>
        <formula>HYPERLINK(&quot;https://portal.guardanthealth.com/closest_sites/&quot;  &amp;  Match_ID__c ,&quot;https://portal.guardanthealth.com/closest_sites/&quot; &amp;  Match_ID__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closest Trial Sites List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competing_Trials__c</fullName>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Competing Trials?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connected_Trial_Site_Address__c</fullName>
        <description>Getting the data from Trial site object on to the Match Record object.</description>
        <formula>Connected_Trial_Site__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connected Trial Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_Trial_Site_City__c</fullName>
        <description>Getting the data from Trial site object to the Match Record object.</description>
        <formula>Connected_Trial_Site__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connected Trial Site City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_Trial_Site_Country__c</fullName>
        <formula>Connected_Trial_Site__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connected Trial Site Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_Trial_Site_Name__c</fullName>
        <description>Getting the data from Trial site object on to the Match Record object.</description>
        <formula>Connected_Trial_Site__r.Trial_Site_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connected Trial Site Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_Trial_Site_State__c</fullName>
        <formula>Connected_Trial_Site__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connected Trial Site State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_Trial_Site_Zip_Code__c</fullName>
        <description>Getting data from Trial Site object on to the Match record object.</description>
        <formula>Connected_Trial_Site__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connected Trial Site Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_Trial_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to trial sites from the same trial.</inlineHelpText>
        <label>Connected Trial Site</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a trial site for this trial.</errorMessage>
            <filterItems>
                <field>$Source.Trial_Name__c</field>
                <operation>equals</operation>
                <valueField>Study_Site__c.Study__r.Id</valueField>
            </filterItems>
            <infoMessage>Use the Search String &apos;*TS-*&apos; to show all trial sites for this match&apos;s trial</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Study_Site__c</referenceTo>
        <relationshipLabel>Match Records Connected to this Trial Site</relationshipLabel>
        <relationshipName>Match_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connected_Trial_Site_account__c</fullName>
        <formula>Connected_Trial_Site__r.Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connected Trial Site (Account)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Achieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reached Provider?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Attempted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CTA Contact Attempted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Do_Not_Send_IOe__c</fullName>
        <formula>Ordering_Physician_Name__r.Do_not_send_IOE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inherited from Ordering MD&apos;s &apos;Do Not Send IOE&apos; email</inlineHelpText>
        <label>Contact Do Not Send IOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Update_Timer__c</fullName>
        <label>Contact Update Timer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Month__c</fullName>
        <formula>CASE(MONTH(TODAY()),
1,&apos;January&apos;,
2,&apos;February&apos;,
3,&apos;March&apos;,
4,&apos;April&apos;,
5,&apos;May&apos;,
6,&apos;June&apos;,
7,&apos;July&apos;,
8,&apos;August&apos;,
9,&apos;September&apos;,
10,&apos;October&apos;,
11,&apos;November&apos;,
12,&apos;December&apos;,
&apos;???&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Signature__c</fullName>
        <label>Custom Signature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generic Signature</fullName>
                    <default>true</default>
                    <label>Generic Signature</label>
                </value>
                <value>
                    <fullName>Tim Schmidt, MD, PhD</fullName>
                </value>
                <value>
                    <fullName>Jason Zhu, MD</fullName>
                </value>
                <value>
                    <fullName>Maya Kotas, MD, PhD</fullName>
                </value>
                <value>
                    <fullName>Shawn Becker, MD</fullName>
                </value>
                <value>
                    <fullName>Rick Lanman, MD</fullName>
                </value>
                <value>
                    <fullName>Sam Sun, MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DO_NOT_CONTACT__c</fullName>
        <formula>Sample_ID__r.Do_not_contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>DO NOT CONTACT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Contact_Achieved__c</fullName>
        <label>Date Reached Provider</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Contact_Attempted__c</fullName>
        <label>Date CTA Contact Attempted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Enrolled__c</fullName>
        <label>Date Enrolled/Prescribed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Identified__c</fullName>
        <label>Date Identified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Ineligible__c</fullName>
        <label>Date Ineligible</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Last_Ditch_Email_Sent__c</fullName>
        <label>Date Last Ditch Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Outreach_Email_Read__c</fullName>
        <label>Date Outreach Email Read</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Outreach_Email_Sent__c</fullName>
        <label>Date Outreach Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PTC_Alert_Sent__c</fullName>
        <label>Date PTC Alert Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pharma_Permission_to_Connect__c</fullName>
        <label>Date Pharma Permission to Connect</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Referral_Letter_Sent__c</fullName>
        <label>Date Informational Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Referred__c</fullName>
        <label>Date Informed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Replied_to_Last_Ditch_Email__c</fullName>
        <label>Date Replied to Last Ditch Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Replied_to_Outreach_Email__c</fullName>
        <label>Date Replied to Outreach Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Screened__c</fullName>
        <label>Date Screened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Show_to_Pharma__c</fullName>
        <label>Date Show to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_1st_Contact__c</fullName>
        <label>Date of 1st Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Failed_Screening__c</fullName>
        <label>Date of Failed Screening</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Contact__c</fullName>
        <label>Date of Last Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_to_Send_Outreach_Email__c</fullName>
        <formula>Date_Outreach_Email_Sent__c  - Final_Report_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Send Outreach Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this overrides &apos;Do Not Contact&apos; = YES setting on the Ordering MD</inlineHelpText>
        <label>Do Not Contact Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_send_IOE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This bypasses the Initial Outreach Processes, &apos;Match: Outreach Email&apos; and &apos;Outreach Email Auto Send&apos;.</description>
        <inlineHelpText>Checked means Do Not Send Initial Outreach Email.</inlineHelpText>
        <label>Do not send IOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <label>Documents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled/Prescribed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status_Notes__c</fullName>
        <label>Enrollment Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status__c</fullName>
        <label>Referral Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Guardant Outreach</fullName>
                </value>
                <value>
                    <fullName>Pharma Outreach</fullName>
                    <label>Pharma/Site Outreach</label>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                    <label>Enrolled/Prescribed</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Sub_Status__c</fullName>
        <label>Referral Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Enrollment_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Pharma</fullName>
                </value>
                <value>
                    <fullName>Accepted by Pharma</fullName>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                </value>
                <value>
                    <fullName>Ready For Outreach</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Future Consideration</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Via Match Program</fullName>
                </value>
                <value>
                    <fullName>Patient Lost to Follow Up</fullName>
                </value>
                <value>
                    <fullName>Provider Refusal</fullName>
                </value>
                <value>
                    <fullName>Patient Refusal</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Trial Change</fullName>
                </value>
                <value>
                    <fullName>Rejected by Pharma</fullName>
                </value>
                <value>
                    <fullName>Newer Test Results Available</fullName>
                </value>
                <value>
                    <fullName>Exhausted Follow-Up</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pending GH Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtNote2__c</fullName>
        <description>Hidden field to record previous values of External Notes</description>
        <label>ExtNote2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Alert_Email_1__c</fullName>
        <description>ENT-3521</description>
        <inlineHelpText>Email Address derived from the Trial</inlineHelpText>
        <label>External Alert Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Alert_Email_2__c</fullName>
        <label>External Alert Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Alert_Email_3__c</fullName>
        <label>External Alert Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Final_Report_Date__c</fullName>
        <formula>Sample_ID__r.Final_Report_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Final Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Reminder__c</fullName>
        <label>Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guardant_Notes_1__c</fullName>
        <description>Used to record changes to field Guardant Notes and resolve discrepancies when that field is overwritten by Portal DB</description>
        <inlineHelpText>This field records previous versions of field Guardant Notes to resolve discrepancies when that field is overwritten by Portal DB</inlineHelpText>
        <label>Guardant Notes 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guardant_Notes_2__c</fullName>
        <label>Guardant Notes 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guardant_Notes__c</fullName>
        <label>External Guardant Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ineligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ineligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntNote2__c</fullName>
        <inlineHelpText>Hidden field to record previous values of Internal Notes</inlineHelpText>
        <label>IntNote2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>International_Sample__c</fullName>
        <formula>AND(
Ordering_Practice_Name__r.BillingCountry&lt;&gt;&quot;US&quot;,
Ordering_Practice_Name__r.BillingCountry&lt;&gt;&quot;United States&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>International Sample</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LIMS_Patient_ID__c</fullName>
        <formula>Patient_ID__r.LIMS_Patient_Record_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIMS Patient ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIMS_Project_ID__c</fullName>
        <formula>Sample_ID__r.LIMS_Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIMS Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Type__c</fullName>
        <label>Last Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Ditch_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Ditch Email Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Match_API_Update__c</fullName>
        <label>Last Match API Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_BioPharma__c</fullName>
        <description>Checks if last modified user was Biopharma or UE profiles. Workaround to get process to work.</description>
        <formula>CASE(LastModifiedBy.ProfileId, &apos;00e34000001CPzp&apos;, 1, &apos;00e340000015RVt&apos;, 1, &apos;00e340000011vJr&apos;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified by BioPharma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MD_Email__c</fullName>
        <description>Hidden field to pass through to Outreach Activity</description>
        <formula>Ordering_Physician_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MD Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_First_Name__c</fullName>
        <formula>Ordering_Physician_Name__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MD First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Last_Contacted_by__c</fullName>
        <formula>Ordering_Physician_Name__r.Last_Contacted_by__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Who last contacted the MD regarding any match, not necessarily this one.</inlineHelpText>
        <label>MD Last Contacted by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Last_Name__c</fullName>
        <description>Hidden field to allow non-lookup actions</description>
        <formula>Ordering_Physician_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MD Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Name__c</fullName>
        <description>Hidden field to allow non-lookup actions</description>
        <formula>Ordering_Physician_Name__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MD Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD_Next_Follow_Up__c</fullName>
        <formula>Ordering_Physician_Name__r.Next_Follow_up_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the date we are next scheduled to follow up with this MD</inlineHelpText>
        <label>MD Next Follow-Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MD_last_contacted_on__c</fullName>
        <formula>Ordering_Physician_Name__r.Date_Last_Contacted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date the MD was contacted regarding any match, not just this one.</inlineHelpText>
        <label>MD Last Contacted on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Match_API_Error__c</fullName>
        <label>Match API Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Match_Algorithm_Version_Number__c</fullName>
        <label>Match Algorithm Version Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Match ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Match_Key__c</fullName>
        <label>Match Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Priority__c</fullName>
        <label>Match Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Match_Record_Notes__c</fullName>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Internal Notes (GH Use Only)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Match_Status__c</fullName>
        <label>Match Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCCN_NCI__c</fullName>
        <formula>IF (  Ordering_Physician_Name__r.Account.NCCN__c  = TRUE, &quot;NCI&quot;,
 IF (  Ordering_Physician_Name__r.Account.NCI_Satellite__c  = TRUE, &quot;NCCN&quot;,
  IF ( AND (Ordering_Physician_Name__r.Account.NCI_Satellite__c = TRUE, Ordering_Physician_Name__r.Account.NCCN__c = TRUE), &quot;NCI and NCCN&quot;, NULL )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>NCCN/NCI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_About_MD_2__c</fullName>
        <description>Hidden field to allow updating from Outreach Activity</description>
        <label>Notes About MD 2</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_About_MD__c</fullName>
        <inlineHelpText>Internal Only. Update this field on the &apos;Ordering Physician&apos; record.</inlineHelpText>
        <label>Notes About MD (GH Use Only)</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ordering_MD_ID__c</fullName>
        <formula>Ordering_Physician_Name__r.Case_Safe_Contact_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordering MD ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Physician_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Looks up to Contact</inlineHelpText>
        <label>Ordering Physician Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Match Records (Ordering Physician Name)</relationshipLabel>
        <relationshipName>Match_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordering_Practice_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Ordering Practice Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Match Records for this Practice</relationshipLabel>
        <relationshipName>Match_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordering_Practice_Referrals_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal Only</inlineHelpText>
        <label>Ordering Practice Referrals POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Match Records (Ordering Practice Referrals POC)</relationshipLabel>
        <relationshipName>Match_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>